<resources>
    <string name="app_name">To do notes</string>
    <string name="project_name">NadecheStuder-pset4</string>
    <string name="to_do">To Do</string>
    <string name="add">Add</string>
    <string name="toast_done">Done</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_nothing_to_save">Nothing to save</string>
    <string name="alert_dialog_delete_item_message">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toast_deleted">Deleted</string>
    <string name="toast_canceled">Canceled</string>
    <string name="db_instruction_entry_add">Type your to do at the bottom and click add to save it.</string>
    <string name="db_instruction_entry_done">Tap short to cross things off your list.</string>
    <string name="db_instruction_entry_delete">Tap and hold to delete things off your list.</string>
    <string name="to_do_lists">To do lists</string>
    <string name="dialog_message">Add a new To Do list</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_delete_list_message">Are you sure you want to delete this list and its contents?</string>
</resources>
